--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,3 +29,11 @@ steps:
 
 images:
   - 'gcr.io/utility-binder-434801-u8/flask-app:$COMMIT_SHA'
+
+# Substitutions allow you to define variables like the commit SHA
+substitutions:
+  _COMMIT_SHA: $BUILD_ID  # This represents the commit SHA automatically provided in Cloud Build
+
+# Options for the Cloud Build setup
+options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
