--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,19 +13,19 @@ steps:
       - 'push'
       - 'gcr.io/utility-binder-434801-u8/flask-app:$COMMIT_SHA'
 
-  # Step 3: Deploy to Google Compute Engine
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'compute'
-      - 'instances'
-      - 'update-container'
-      - 'docker-container-instance'
-      - '--zone'
-      - 'us-central1-a'
-      - '--container-image'
-      - 'gcr.io/utility-binder-434801-u8/flask-app:$COMMIT_SHA'
-      - '--container-restart-policy'
-      - 'always'
+  # # Step 3: Deploy to Google Compute Engine
+  # - name: 'gcr.io/cloud-builders/gcloud'
+  #   args:
+  #     - 'compute'
+  #     - 'instances'
+  #     - 'update-container'
+  #     - 'docker-container-instance'
+  #     - '--zone'
+  #     - 'us-central1-a'
+  #     - '--container-image'
+  #     - 'gcr.io/utility-binder-434801-u8/flask-app:$COMMIT_SHA'
+  #     - '--container-restart-policy'
+  #     - 'always'
 
 images:
   - 'gcr.io/utility-binder-434801-u8/flask-app:$COMMIT_SHA'
