--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -40,5 +40,8 @@ steps:
         sudo docker rm flask-app || true
         sudo docker run -d --name flask-app -p 4000:4000 montholch86/flask-app:latest
 
+images:
+  - 'montholch86/flask-app:latest'
+
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
