--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,14 +45,11 @@ steps:
   # Step 6: Run the Docker container
   - name: 'gcr.io/cloud-builders/docker'
     id: 'Run Docker container'
+    entrypoint: 'bash'
     args:
-      - 'sudo docker run'
-      - '-d'
-      - '--name'
-      - 'flask-app'
-      - '-p'
-      - '4000:4000'
-      - 'montholch86/flask-app:latest'
+      - '-c'
+      - | 
+        sudo docker run -d --name flask-app -p 4000:4000 montholch86/flask-app:latest
 
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
