--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,34 +26,20 @@ steps:
       - 'push'
       - 'montholch86/flask-app:latest'
 
-  # Step 4. Pull the Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'Pull Docker image'
+  # Step 6: Run the Docker container
+  - name: gcr.io/cloud-builders/gcloud
     args:
-      - 'pull'
-      - 'montholch86/flask-app:latest'
-
-  # Step 5: Stop and remove the existing container if it exists
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'Stop and Remove Docker container'
-    entrypoint: 'bash'
-    args:
-      - '-c'
+      - 'compute'
+      - 'ssh'
+      - 'monthol@changsathien-instance'
+      - '--zone'
+      - 'us-central1-a'
+      - '--command'
       - |
+        sudo docker pull montholch86/flask-app:latest
         sudo docker stop flask-app || true
         sudo docker rm flask-app || true
-
-  # Step 6: Run the Docker container
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'Run Docker container'
-    args:
-      - 'run'
-      - '-d'
-      - '--name'
-      - 'flask-app'
-      - '-p'
-      - '4000:4000'
-      - 'montholch86/flask-app:latest'
+        sudo docker run -d --name flask-app -p 4000:4000 montholch86/flask-app:latest
 
 options:
   defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
